@@ -3,6 +3,7 @@ Rosario Student Information System - CHANGES
 Changes in 2.8.9
 ----------------
 - Attendance Codes Type & State Code required in AttendanceCodes.php
+- Add Add No Subjects/Courses were found error in ReportCardComments.php
 
 Changes in 2.8.8
 ----------------
